--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 
-
+h1, h4 {
+	margin: 20px;
+}
 
 #isocodeList {
 	width: 100%;
@@ -19,21 +21,33 @@ input[type=checkbox]:checked ~ #isocodeList {
 	margin: 20px;
 }
 
-label{
+label {
 	display: inline-block;
-	width:30%;
+	width: 20%;
 	margin: 5px 0px;
 }
 
-#currentWeatherInfo h2{
+#currentWeatherInfo h2 {
 	margin-bottom: 0px;
 }
 
-#isocodeShowLabel{
-	text-decoration:underline ;
+#isocodeShowLabel {
+	text-decoration: underline;
 	ursor: pointer;
 	cursor: hand;
 }
-#isocodeShowLabel:hover{
+
+#isocodeShowLabel:hover {
 	color: red;
 }
+
+.row {
+	border: 1px solid #000;
+	padding: 5px;
+
+}
+
+.row:nth-child(2n) {
+	background-color: #e3e3e3;
+}
+
